--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-copy-path",
   "main": "./lib/simple-copy-path.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Adds copy project path and full path to editor and tab menus",
   "keywords": [
     "copy"
@@ -10,5 +10,9 @@
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jnwaletzko/atom-copy-project-path.git"
   }
 }
